<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirteenHW.ThirteenActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputField_fibonacci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Enter index"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/inputText_fibonacci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_fibonacci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputField_fibonacci" />

    <Button
        android:id="@+id/button_fibonacci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="Get"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>